fixed white space issue & input box breaking issue

--- a/docs/css/track.css
+++ b/docs/css/track.css
@@ -451,7 +451,7 @@ margin-left:20px;}
 
 
     #track-input{
-    width:200px;
+    width:185px;
     height:35px;
     border-radius:7px;
     text-align:center;
@@ -462,7 +462,7 @@ margin-left:20px;}
 /* Order details header */
 
 #lower-container{
-    width:95%;
+    width:94.5%;
     max-width:100vw;
     height:100%;
     background-color:rgb(255, 255, 255);
